# greedy_python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  prebuild.sh
docs/: developer.md
src/: GreedyPythonBindings.cxx
src/picsl_greedy/: __init__.py  _greedy_api.py
tests/: conftest.py  test_lmshoot.py  test_propagation.py  test_registration.py
